<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">clarkmapp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">ClarkMapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="find_button_text">Locate A Room</string>
    <string name="map_button_text">Map</string>
    <string name="help_button_text">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="contact_text">\
	    If you require any further technical assistance you can contact the developers at:
	   		 		help@mesalu.com</string>
    <string name="title_activity_contact">Contact</string>
    <string name="help_text">Help</string>
    <string name="lab_text">Open Labs</string>
    <string name="contact_button">Contact Support</string>
    <string name="title_activity_map">Maps</string>
    <string name="maincampus_button">Main Campus</string>
    <string name="wsu_button">WSU Building</string>
    <string name="imgdesc">I\'M AN IMAGE :D</string>
    <string name="ctc_button">CTC</string>

</resources>
