<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MapActivity" >

    <Button
        android:id="@+id/maincampus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/maincampus_button" />

    <Button
        android:id="@+id/wsu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/maincampus_button"
		android:layout_marginRight="6dp"
        android:layout_alignParentTop="true"
        android:text="@string/wsu_button" />
    
   
    <Button
        android:id="@+id/ctc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/maincampus_button"
        android:layout_alignParentTop="true"
        android:text="@string/ctc_button" />

    <!--  need to modify the three top buttons, they overlap in less than xhdpi screens -->

 	<ImageView
 	    android:id="@+id/map_img_view"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentBottom="true"
 	    android:layout_alignParentLeft="true"
 	    android:layout_alignParentRight="true"
 	    android:layout_below="@+id/maincampus_button"
 	    android:contentDescription="@string/imgdesc"
 	    android:src="@drawable/splash" />
    
</RelativeLayout>
