<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/clarkimg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
       android:id="@+id/map_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/find_button"
       android:layout_alignBottom="@+id/find_button"
       android:layout_marginRight="5dp"
       android:layout_toLeftOf="@+id/find_button"
       android:text="@string/map_button_text" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/find_button"
        android:layout_alignBottom="@+id/find_button"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/find_button"
        android:text="@string/help_button_text" />

    <Button
        android:id="@+id/find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/find_button_text" />

</RelativeLayout>
